[gd_scene load_steps=2 format=3 uid="uid://qt5fgtmfnj8x"]

[ext_resource type="Script" path="res://Title screen/title_screen.gd" id="1_sx2mq"]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_sx2mq")

[node name="Play" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.5
offset_right = 50.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="Credits" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -445.0
offset_right = 50.0
offset_bottom = -414.0
grow_horizontal = 2
grow_vertical = 0
text = "Credits"

[node name="Directions" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -401.0
offset_right = 50.0
offset_bottom = -370.0
grow_horizontal = 2
grow_vertical = 0
text = "Directions"

[connection signal="pressed" from="Play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Directions" to="." method="_on_directions_button_pressed"]
